--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,14 @@
     ],
     "require": {
         "php": ">=7.0",
-        "illuminate/support": "5.4.*",
-        "illuminate/database": "5.4.*",
-        "illuminate/routing": "5.4.*",
-        "illuminate/validation": "5.4.*"
+        "illuminate/support": "~5.4",
+        "illuminate/database": "~5.4",
+        "illuminate/routing": "~5.4",
+        "illuminate/validation": "~5.4",
+        "illuminate/contracts": "~5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0",
-        "laravel/laravel": "5.4.*"
+        "phpunit/phpunit": "^5.0"
     },
     "autoload": {
         "psr-4": {
