--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,11 @@
     ],
     "require": {
         "php": ">=7.0",
-        "illuminate/support": "^5.4|^6.0",
-        "illuminate/database": "^5.4|^6.0",
-        "illuminate/routing": "^5.4|^6.0",
-        "illuminate/validation": "^5.4|^6.0",
-        "illuminate/contracts": "^5.4|^6.0"
+        "illuminate/support": "^5.4|^6.0|^7.0",
+        "illuminate/database": "^5.4|^6.0|^7.0",
+        "illuminate/routing": "^5.4|^6.0|^7.0",
+        "illuminate/validation": "^5.4|^6.0|^7.0",
+        "illuminate/contracts": "^5.4|^6.0|^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0"
