--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hyancat/laravel-app-version",
+    "name": "ruogoo/laravel-app-version",
     "authors": [
         {
             "name": "HyanCat",
@@ -8,18 +8,18 @@
     ],
     "require": {
         "php": ">=7.0",
-        "illuminate/support": "^5.4|^6.0|^7.0",
-        "illuminate/database": "^5.4|^6.0|^7.0",
-        "illuminate/routing": "^5.4|^6.0|^7.0",
-        "illuminate/validation": "^5.4|^6.0|^7.0",
-        "illuminate/contracts": "^5.4|^6.0|^7.0"
+        "illuminate/support": "^5.4|^6.0|^7.0|^8.0",
+        "illuminate/database": "^5.4|^6.0|^7.0|^8.0",
+        "illuminate/routing": "^5.4|^6.0|^7.0|^8.0",
+        "illuminate/validation": "^5.4|^6.0|^7.0|^8.0",
+        "illuminate/contracts": "^5.4|^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0"
     },
     "autoload": {
         "psr-4": {
-            "HyanCat\\AppVersion\\": "src/"
+            "Ruogoo\\AppVersion\\": "src/"
         }
     },
     "scripts": {
