--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,15 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
-        "illuminate/support": "^5.4|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "illuminate/database": "^5.4|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "illuminate/routing": "^5.4|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "illuminate/validation": "^5.4|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "illuminate/contracts": "^5.4|^6.0|^7.0|^8.0|^9.0|^10.0"
+        "php": ">=8.1",
+        "illuminate/support": "^10.0|^11.0|^12.0",
+        "illuminate/database": "^10.0|^11.0|^12.0",
+        "illuminate/routing": "^10.0|^11.0|^12.0",
+        "illuminate/validation": "^10.0|^11.0|^12.0",
+        "illuminate/contracts": "^10.0|^11.0|^12.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0"
+        "phpunit/phpunit": "^10.0|^11.0|^12.0"
     },
     "autoload": {
         "psr-4": {
